...
    android:layout_marginTop="3dp"
    android:layout_marginHorizontal="5dp"
    android:elevation="8dp"
    android:clipToPadding="true">

    <androidx.cardview.widget.CardView
        android:id="@+id/groupOperations_card"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:cardCornerRadius="12.5dp">
...
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/groupOperations_amount"
                        android:fontFamily="@font/avenir"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:gravity="center"
...
